# raytracer

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  commons.hpp  compile_commands.json  main.cpp  materials.mtl  raytracer  raytracer.cbp  raytracer.h  readme.md
cmake/: FindCatch.cmake
entities/: figure.h  light.h  material.h  sphere.h  triangle.h  vertex.h
geometry/: geometry_calculations.h  vector.h
parsing/: commons.h  mtl_parser.h  obj_parser.h
